Wrap sections in own css classes to be displayed correctly on devices of different scale, ref #182

--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -1,26 +1,52 @@
-html, body {
-    height: 442vh;
+/*
+All css for landing page.
+ */
+
+/* Overwrite container from application.html.erb */
+.container {
+    width: 100%;
+    max-width: 100%;
+    padding: 0 0;
 }
 
-.background {
-    background:
-            url(https://owncloud.hpi.de/index.php/s/9COQa356VzqZGon/download),
-            url(https://owncloud.hpi.de/index.php/s/EGPcXbAmI63mB1C/download),
-            url(https://owncloud.hpi.de/index.php/s/rkCBUFNVV5Pw9kE/download),
-            url(https://owncloud.hpi.de/index.php/s/9kF7pAHTCurEXPm/download),
-            url(https://owncloud.hpi.de/index.php/s/BokofLs1yk3wJlL/download);
-    background-size: 100% 100vh;
-    background-repeat: no-repeat;
-    background-position:
-            0% 0vh,
-            0% 79vh,
-            0% 167vh,
-            0% 249vh,
-            0% 335vh;
+.section {
+    width: 100vw;
+    height: auto;
+    min-height: 100vh;
+    background-color: cadetblue;
+    background-size: cover;
+    margin-bottom: -25vh;
+    padding: 25vh 15px;
+}
+
+.section.darkblue-soccer  {
+    background: url(https://owncloud.hpi.de/index.php/s/9COQa356VzqZGon/download);
+    background-size: cover;
+    padding-top: 10vh;
+}
+
+.section.lightblue-soccer  {
+    background: url(https://owncloud.hpi.de/index.php/s/EGPcXbAmI63mB1C/download);
+    background-size: cover;
+}
+
+.section.orange-basketball  {
+    background: url(https://owncloud.hpi.de/index.php/s/rkCBUFNVV5Pw9kE/download);
+    background-size: cover;
+}
+
+.section.white-nothing  {
+    background: url(https://owncloud.hpi.de/index.php/s/9kF7pAHTCurEXPm/download);
+    background-size: cover;
+}
+
+.section.purple-skating  {
+    background: url(https://owncloud.hpi.de/index.php/s/BokofLs1yk3wJlL/download);
+    background-size: cover;
 }
 
 h1 {
-    margin: 11.1rem 0 0.68rem 0;
+    margin: 0 0 0.68rem 0;
 }
 
 #header-description {
